--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  font_awesome_flutter: ^8.10.0
-  google_fonts: ^1.1.1
-
-
+  cupertino_icons: ^1.0.4
+  font_awesome_flutter: ^9.2.0
+  google_fonts: ^2.1.0
+  shelf: ^1.2.0
+  shelf_static: ^1.1.0
 
   #Overrides for issues with google fonts version this is so firebase can run
 
@@ -52,7 +52,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
