Adjust file structure, migrate to nextcord

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ authors = ["teamvista <<>>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-"discord.py" = "^1.7.3"
+aiohttp = "3.6.0"
+nextcord = "^2.0.0a3"
 
 [tool.poetry.dev-dependencies]
 
