Enforce UNIX line endings

--- a/.gitignore
+++ b/.gitignore
@@ -116,7 +116,7 @@ lib/generated_plugin_registrant.dart
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -178,7 +178,7 @@ $RECYCLE.BIN/
 *.class
 
 # Generated files
-bin/
+# bin/
 gen/
 out/
 
