--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_fonts: ^2.1.0
   shelf: ^1.2.0
   shelf_static: ^1.1.0
+  configurable_expansion_tile_null_safety: ^2.0.0
 
 
   #Overrides for issues with google fonts version this is so firebase can run
