--- a/.gitignore
+++ b/.gitignore
@@ -300,7 +300,8 @@ fabric.properties
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
-__pycache__/
+*/__pycache__/*
+
 *.py[cod]
 *$py.class
 
