--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   firebase_core: ^1.10.0
   firebase_auth: ^3.1.4
   firebase_database: ^8.1.0
-  google_sign_in: ^4.5.3
+  google_sign_in: ^5.0.0-nullsafety
 
 
 
