--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 aiohttp = "3.6.0"
 nextcord = "^2.0.0a3"
 python-dateutil = "^2.8.2"
+Authlib = "^0.15.5"
 
 [tool.poetry.dev-dependencies]
 
